...
    android:layout_marginTop="16dp"
    android:gravity="start"
    android:orientation="horizontal"
    >

    <ImageButton
        android:id="@+id/viewProfileButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="start"
        android:background="@drawable/circle_background"
        android:backgroundTint="@color/pasteColor"
        android:contentDescription="View Profile"
...
